--- a/sbml/iSyn731/compounds.yaml
+++ b/sbml/iSyn731/compounds.yaml
@@ -26,13 +26,13 @@
   name: Sulfoquinovosyldiacylglycerol (n-C18_3)
   charge: -1
 - id: c_12dgr181_9
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-9-enoyl, n-C18_1)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-9-enoyl, n-C18_1)
   charge: 0
 - id: c_12dgr183_6_9_12
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-6-9-12-trienoyl, n-C18_3)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-6-9-12-trienoyl, n-C18_3)
   charge: 0
 - id: c_12dgr184_6_9_12_15
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-6-9-12-15-tetraenoyl, n-C18_4)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-6-9-12-15-tetraenoyl, n-C18_4)
   charge: 0
 - id: c_1odec691215eg3p
   name: 1-octadec-6-9-12-15-tetraenoyl-sn-glycerol 3-phosphate
@@ -41,7 +41,7 @@
   name: 1-octadec-6-9-12trienoyl-sn-glycerol 3-phosphate
   charge: -2
 - id: c_1odec9eg3p
-  name: 1-octadec-9-enoyl-sn-glycerol 3-phosphate
+  name: 1-octadec-9-enoyl-sn-glycerol3-phosphate
   charge: -2
 - id: c_DLiG3P
   name: 1,2-dioctadec-9-12-dienoyl-sn-glycerol 3-phosphate
@@ -355,9 +355,6 @@
 - id: cpd00103
   name: PRPP
   charge: -3
-- id: cpd00104
-  name: Biotin
-  charge: -1
 - id: cpd00105
   name: D-Ribose
   charge: 0
@@ -427,9 +424,6 @@
 - id: cpd00135
   name: Homocysteine
   charge: 0
-- id: cpd00136
-  name: 4-Hydroxybenzoate
-  charge: -1
 - id: cpd00137
   name: Citrate
   charge: -3
@@ -907,6 +901,15 @@
 - id: cpd00525
   name: UDP-N-acetylmuramoyl-L-alanyl-D-glutamate
   charge: -4
+- id: cpd00528_c
+  name: Nitrogen
+  charge: 0
+- id: cpd00528_e
+  name: Nitrogen
+  charge: 0
+- id: cpd00528_p
+  name: Nitrogen
+  charge: 0
 - id: cpd00533
   name: dCDP
   charge: -2
@@ -1138,9 +1141,6 @@
 - id: cpd01017
   name: L-Cysteinylglycine
   charge: 0
-- id: cpd01048
-  name: Arsenate
-  charge: -2
 - id: cpd01080
   name: octadecanoate (n-C18_0)
   charge: -1
@@ -1153,6 +1153,12 @@
 - id: cpd01155
   name: Cadaverine
   charge: 2
+- id: cpd01174_c
+  name: Glyceollin
+  charge: 0
+- id: cpd01174_p
+  name: Glyceollin
+  charge: 0
 - id: cpd01211
   name: Thiocyanate
   charge: -1
@@ -1260,6 +1266,9 @@
   charge: -1
 - id: cpd01844
   name: Propionyl phosphate
+  charge: -1
+- id: cpd01855_c
+  name: Xylitol 5-phosphate
   charge: -1
 - id: cpd01881
   name: 3-Indoleacetonitrile
@@ -1822,6 +1831,9 @@
 - id: cpd11225
   name: 3-4-dihydroxy-2-butanone4-phosphate
   charge: -1
+- id: cpd11312_c
+  name: Heme A
+  charge: -2
 - id: cpd11313
   name: hemeO
   charge: -2
@@ -1951,9 +1963,6 @@
 - id: cpd11830
   name: S-Aminomethyldihydrolipoylprotein
   charge: 1
-- id: cpd11836
-  name: (R)-3-Hydroxyacyl-[acyl-carrier protein]
-  charge: -1
 - id: cpd11906
   name: tRNA(Ala)
   charge: 0
@@ -2494,8 +2503,8 @@
   name: Phosphatidylglycerophosphate (dioctadec-9-enoyl, n-C18_1)
   charge: -3
 - id: cpdR_D_D
-  name: Cyanophycin monomer with aspartate
-  charge: 1
+  name: MetcpdR_D_D_c
+  charge: 0
 - id: cpd_msbq
   name: 2-methyl-6-solanyl-1,4-benzoquinone
   charge: 0
