Fix stoichiometric balance of UNK2 reaction

--- a/sbml/RECON1/reactions.yaml
+++ b/sbml/RECON1/reactions.yaml
@@ -10018,7 +10018,7 @@
   equation: atp[n] + ump[n] <=> adp[n] + udp[n]
 - id: UNK2
   name: UNK2
-  equation: 2kmb[c] + gln__L[c] + h[c] => glu__L[c] + met__L[c]
+  equation: M_2kmb[c] + M_gln__L[c] + (2) M_h_c[c] => M_glu__L[c] + M_met__L[c]
 - id: UNK3
   name: 2-keto-4-methylthiobutyrate transamination
   equation: 2kmb[c] + glu__L[c] => akg[c] + met__L[c]
