Changed to recon2 that are being made in addition to those in "correct_various_models." These changes include the following: (1) add list of known mass inbalanced reactions from Thiele et al…, (2) add compound formulas for two missing compounds, (3) mark proton-gradient pseudo-compounds as zero-mass, and (4) add list of additional inbalanced reactions.

--- a/sbml/recon2/compounds.yaml
+++ b/sbml/recon2/compounds.yaml
@@ -4059,6 +4059,7 @@
 - id: HC00576
   name: Homocarnosine
   charge: 0
+  formula: C10H15N4O3
 - id: HC00591
   name: 2-oxoglutaramate
   formula: C5H6NO4
@@ -4345,6 +4346,7 @@
 - id: HC01668
   name: Propinol adenylate
   charge: 0
+  formula: C13H18N5O8P
 - id: HC01672
   name: Acetyl adenylate
   formula: C12H15N5O8P
@@ -4471,6 +4473,7 @@
 - id: HC02115
   name: Proton-gradient
   charge: 0
+  zeromass: yes
 - id: HC02116
   name: activated-sulphur
   charge: 0
