Multiple models: Mark zeromass compounds

--- a/sbml/iRC1080/compounds.yaml
+++ b/sbml/iRC1080/compounds.yaml
@@ -2163,22 +2163,31 @@
   formula: C4H8NO6P
 - id: photon298
   name: photon (281 to 306 nm, UVB)
+  zeromass: yes
 - id: photon437
   name: photon (406 to 454 nm, indigo/blue)
+  zeromass: yes
 - id: photon438
   name: photon (378 to 482 nm, violet/blue)
+  zeromass: yes
 - id: photon450
   name: photon (417 to 472 nm, indigo/blue)
+  zeromass: yes
 - id: photon490
   name: photon (451 to 526 nm, blue/green)
+  zeromass: yes
 - id: photon646
   name: photon (608 to 666 nm, orange/red)
+  zeromass: yes
 - id: photon673
   name: photon (659 to 684 nm, red)
+  zeromass: yes
 - id: photon680
   name: photon (662 to 691 nm, red)
+  zeromass: yes
 - id: photonVis
   name: photon (380 to 750 nm, visible spectrum)
+  zeromass: yes
 - id: phphbda
   name: Pheophorbide a
 - id: phphtna
