--- a/sbml/iRS1563/compounds.yaml
+++ b/sbml/iRS1563/compounds.yaml
@@ -5475,9 +5475,11 @@
 - id: hvi
   name: hv_input
   charge: 0
+  zeromass: yes
 - id: hvo
   name: hv_output
   charge: 0
+  zeromass: yes
 - id: product
   name: product[c]
   charge: 0
