--- a/sbml/iSyn669/compounds.yaml
+++ b/sbml/iSyn669/compounds.yaml
@@ -1412,8 +1412,10 @@
   name: phosphoribulosylformimino-AICAR-P
 - id: photonII_c
   name: photonII
+  zeromass: yes
 - id: photonI_c
   name: photonI
+  zeromass: yes
 - id: phylloquinone_c
   name: phylloquinone
 - id: phytoene_c
