--- a/sbml/iSyn731/compounds.yaml
+++ b/sbml/iSyn731/compounds.yaml
@@ -2529,9 +2529,11 @@
 - id: hvphoton1
   name: Photosystem 1 photon
   charge: 0
+  zeromass: yes
 - id: hvphoton2
   name: Photosystem 2 photon
   charge: 0
+  zeromass: yes
 - id: mgdg181
   name: 1,2-Diacyl-3-beta-D-galactosyl-sn-glycerol (n-C18_1)
   charge: 0
