Fix: Reimport iSyn731 model from Sept. 9, 2015

--- a/sbml/iSyn731/compounds.yaml
+++ b/sbml/iSyn731/compounds.yaml
@@ -26,13 +26,13 @@
   name: Sulfoquinovosyldiacylglycerol (n-C18_3)
   charge: -1
 - id: c_12dgr181_9
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-9-enoyl, n-C18_1)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-9-enoyl, n-C18_1)
   charge: 0
 - id: c_12dgr183_6_9_12
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-6-9-12-trienoyl, n-C18_3)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-6-9-12-trienoyl, n-C18_3)
   charge: 0
 - id: c_12dgr184_6_9_12_15
-  name: 1,2-Diacyl-sn-glycerol (dioctadec-6-9-12-15-tetraenoyl, n-C18_4)
+  name: 1,2-Diacyl-sn-glycerol(dioctadec-6-9-12-15-tetraenoyl, n-C18_4)
   charge: 0
 - id: c_1odec691215eg3p
   name: 1-octadec-6-9-12-15-tetraenoyl-sn-glycerol 3-phosphate
@@ -41,7 +41,7 @@
   name: 1-octadec-6-9-12trienoyl-sn-glycerol 3-phosphate
   charge: -2
 - id: c_1odec9eg3p
-  name: 1-octadec-9-enoyl-sn-glycerol 3-phosphate
+  name: 1-octadec-9-enoyl-sn-glycerol3-phosphate
   charge: -2
 - id: c_DLiG3P
   name: 1,2-dioctadec-9-12-dienoyl-sn-glycerol 3-phosphate
@@ -907,6 +907,15 @@
 - id: cpd00525
   name: UDP-N-acetylmuramoyl-L-alanyl-D-glutamate
   charge: -4
+- id: cpd00528_c
+  name: Nitrogen
+  charge: 0
+- id: cpd00528_e
+  name: Nitrogen
+  charge: 0
+- id: cpd00528_p
+  name: Nitrogen
+  charge: 0
 - id: cpd00533
   name: dCDP
   charge: -2
@@ -1153,6 +1162,9 @@
 - id: cpd01155
   name: Cadaverine
   charge: 2
+- id: cpd01174
+  name: Glyceollin
+  charge: 0
 - id: cpd01211
   name: Thiocyanate
   charge: -1
@@ -1260,6 +1272,9 @@
   charge: -1
 - id: cpd01844
   name: Propionyl phosphate
+  charge: -1
+- id: cpd01855
+  name: Xylitol 5-phosphate
   charge: -1
 - id: cpd01881
   name: 3-Indoleacetonitrile
@@ -1822,6 +1837,9 @@
 - id: cpd11225
   name: 3-4-dihydroxy-2-butanone4-phosphate
   charge: -1
+- id: cpd11312
+  name: Heme A
+  charge: -2
 - id: cpd11313
   name: hemeO
   charge: -2
@@ -1951,9 +1969,6 @@
 - id: cpd11830
   name: S-Aminomethyldihydrolipoylprotein
   charge: 1
-- id: cpd11836
-  name: (R)-3-Hydroxyacyl-[acyl-carrier protein]
-  charge: -1
 - id: cpd11906
   name: tRNA(Ala)
   charge: 0
@@ -2494,8 +2509,8 @@
   name: Phosphatidylglycerophosphate (dioctadec-9-enoyl, n-C18_1)
   charge: -3
 - id: cpdR_D_D
-  name: Cyanophycin monomer with aspartate
-  charge: 1
+  name: MetcpdR_D_D_c
+  charge: 0
 - id: cpd_msbq
   name: 2-methyl-6-solanyl-1,4-benzoquinone
   charge: 0
