--- a/sbml/iMA871/exchange.yaml
+++ b/sbml/iMA871/exchange.yaml
@@ -313,7 +313,7 @@ compounds:
 - id: M_PROPALe
   reaction: '1380'
 - id: M_BIOMASS
-  compartment: C-c
+  compartment: c
   lower: 0
 - id: M_PROPe
   reaction: '1289'
