--- a/sbml/RECON1/reactions.yaml
+++ b/sbml/RECON1/reactions.yaml
@@ -1051,7 +1051,7 @@
 - id: ALACYSNaEx
   name: ALACYSNaEx
   equation: ala__L[e] + cys__L[c] + na1[e] => ala__L[c] + cys__L[e] + na1[c]
-- id: ALADexR
+- id: ALADGLNexR
   name: ALADGLNexR
   equation: ala__D[e] + gln__L[c] <=> ala__D[c] + gln__L[e]
 - id: ALADGLYexR
