Updated compartment list to include all descriptions.

--- a/sbml/iMM1415/model.yaml
+++ b/sbml/iMM1415/model.yaml
@@ -12,6 +12,24 @@ compartments:
   - r
   - x
   name: cytosol
+- id: g
+  adjacent_to: c
+  name: GolgiApparatus
+- id: m
+  adjacent_to: c
+  name: Mitochondria
+- id: l
+  adjacent_to: c
+  name: Lysosome
+- id: n
+  adjacent_to: c
+  name: Nucleus
+- id: r
+  adjacent_to: c
+  name: EndoplasmicReticulum
+- id: x
+  adjacent_to: c
+  name: Peroxisome
 - id: e
   adjacent_to:
   - c
