typos in 'genes' fields

--- a/sbml/iMM1415/reactions.yaml
+++ b/sbml/iMM1415/reactions.yaml
@@ -12048,7 +12048,7 @@
   name: PDE1
   genes: (54611) or (18578) or (18584) or (18574) or (18583) or (110385) or (18583)
     or (18575) or (238871) or (18573) or (18576) or (218461) or (23984) or (18584)
-    or (18576) or  or (207728) or (18573) or (18584) or (241489) or (29863) or (18584)
+    or (18576) or (207728) or (18573) or (18584) or (241489) or (29863) or (18584)
     or (18584)
   equation: h2o_c[c] + camp_c[c] => amp_c[c] + h_c[c]
   subsystem: Nucleotides
@@ -12059,10 +12059,10 @@
   subsystem: Nucleotides
 - id: PDE4
   name: PDE4
-  genes: (54611) or (110855) or  or (242202) or  or (18573) or  or (241489) or (242202)
-    or (23984) or  or (225600 and 18587 and 78600) or (18576) or  or  or (18575)
-    or (18573) or (207728) or  or (18574) or (242202) or  or  or  or  or  or  or  or
-    (18576) or  or  or (225600 and 110855 and 18582 and 18587 and 18588) or
+  genes: (54611) or (110855) or (242202) or (18573) or (241489) or (242202)
+    or (23984) or (225600 and 18587 and 78600) or (18576) or (18575)
+    or (18573) or (207728) or (18574) or (242202) or
+    (18576) or (225600 and 110855 and 18582 and 18587 and 18588)
   equation: h2o_c[c] + 35cgmp_c[c] => h_c[c] + gmp_c[c]
   subsystem: Nucleotides
 - id: PDE4g
@@ -12573,7 +12573,7 @@
   subsystem: Transport, Extracellular
 - id: PIt7ir
   name: PIt7ir
-  genes: (319848) or (105355) or  or (20504)
+  genes: (319848) or (105355) or (20504)
   equation: pi_e[e] + (3) na1_e[e] => pi_c[c] + (3) na1_c[c]
   subsystem: Transport, Extracellular
 - id: PIt8
@@ -15326,7 +15326,7 @@
   subsystem: Aminosugar Metabolism
 - id: UAGDP
   name: UAGDP
-  genes: (107652) or
+  genes: (107652)
   equation: utp_c[c] + acgam1p[c] + h_c[c] => uacgam_c[c] + ppi_c[c]
   subsystem: Aminosugar Metabolism
 - id: UDPACGALtl
