--- a/sbml/iRS1563/reactions.yaml
+++ b/sbml/iRS1563/reactions.yaml
@@ -1024,7 +1024,7 @@
   equation: C00003[c] + C00186[c] <=> C00080[c] + C00022[c] + C00004[c]
 - id: R00705_c
   name: 3-Oxopropanoate:NAD+ oxidoreductase (decarboxylating, CoA-acetylating)
-  genes: AC233853.1_FG003 or AC233853.1_FG003 or or AC233853.1_FG003 or AC233853.1_FG003
+  genes: AC233853.1_FG003 or AC233853.1_FG003 or AC233853.1_FG003 or AC233853.1_FG003
   equation: C00003[c] + C00010[c] + C00222[c] <=> C00011[c] + C00004[c] + C00024[c]
 - id: R00708_c
   name: (S)-1-pyrroline-5-carboxylate:NADP+ oxidoreductase
@@ -2542,7 +2542,7 @@
   name: Dihydrofolate:NAD+ oxidoreductase
   genes: (GRMZM2G152686 and GRMZM2G152686 or (GRMZM2G003883 and GRMZM2G003883 and
     GRMZM2G004534 and GRMZM2G003883 and GRMZM2G003883 and GRMZM2G003883 and GRMZM2G008714
-    and GRMZM2G003883 and GRMZM2G150098)
+    and GRMZM2G003883 and GRMZM2G150098))
   equation: C00080[c] + C00004[c] + C00504[c] => C00003[c] + C00415[c]
 - id: R02241_c
   name: acyl-CoA:1-acyl-sn-glycerol-3-phosphate 2-O-acyltransferase
@@ -3626,7 +3626,7 @@
   equation: C00003[c] + C02972[c] => C00080[c] + C00004[c] + C02051[c]
 - id: R03824_c
   genes: (GRMZM2G057823 and GRMZM2G066024 and GRMZM2G066024 and GRMZM2G066024) or
-    GRMZM2G057823 or
+    GRMZM2G057823
   equation: C05435[c] => C02094[c]
 - id: R03840_c
   name: ATP:5'-dephosphopolynucleotide 5'-phosphotransferase
@@ -4326,7 +4326,7 @@
 - id: R04936_c
   name: Se-Adenosylselenohomocysteine hydrolase
   genes: (GRMZM2G175499 and GRMZM2G128682) or GRMZM2G136106 or (GRMZM2G136106 and
-    and GRMZM2G175499 and GRMZM2G043943 and GRMZM2G012328) or GRMZM2G125356
+    GRMZM2G175499 and GRMZM2G043943 and GRMZM2G012328) or GRMZM2G125356
   equation: C00001[c] + C05692[c] => C00212[c] + C05698[c]
 - id: R04939_c
   equation: C05691[c] + C05693[c] => C05692[c] + C05694[c]
