--- a/sbml/iVS941/reactions.yaml
+++ b/sbml/iVS941/reactions.yaml
@@ -1647,7 +1647,7 @@
   equation: man6p_c[Cytosol] <=> f6p_c[Cytosol]
 - id: MCMMT
   name: R_Methanol__coenzyme_M_methyltransferase
-  genes: ( MA0455  or  MA4392  or  ( MA1616  and  MA0456 )  or  ( MA4391 )  or  MA1617  ana  MA4379
+  genes: ( MA0455  or  MA4392  or  ( MA1616  and  MA0456 )  or  ( MA4391 )  or  MA1617  and  MA4379
     )
   equation: com_c[Cytosol] + meoh_c[Cytosol] => h2o_c[Cytosol] + mcom_c[Cytosol]
 - id: MCR
