--- a/sbml/iRS1597/reactions.yaml
+++ b/sbml/iRS1597/reactions.yaml
@@ -1136,7 +1136,7 @@
 - id: R01138[c]
   name: dATP:pyruvate 2-O-phosphotransferase
   genes: (AT1G32440 and AT5G52920 or (AT3G04050 and AT3G25960 and AT3G52990 and AT3G55650
-    and AT3G55810 and AT4G26390 and AT5G08570 and AT5G56350 and AT5G63680) or AT3G49160
+    and AT3G55810 and AT4G26390 and AT5G08570 and AT5G56350 and AT5G63680) or AT3G49160)
   equation: C00080_c[c] + C00074[c] + C00206[c] <=> C00022_c[c] + C00131[c]
 - id: R01151[c]
   name: Putrescine:oxygen oxidoreductase (deaminating)
@@ -2013,7 +2013,7 @@
     + C00058_c[c] + C00006_c[c] + C00468[c]
 - id: R02362[c]
   name: Pectin pectylhydrolase
-  genes: (AT1G11590 and AT5G04970) or AT1G53830 or (AT2G45220 and and AT3G43270 and
+  genes: (AT1G11590 and AT5G04970) or AT1G53830 or (AT2G45220 and AT3G43270 and
     AT5G19730 and AT5G49180) or AT2G47030
   equation: C00001_c_x[c] + C00714[c] => C00132[c] + C00470[c]
 - id: R02371[c]
@@ -5387,7 +5387,7 @@
   equation: C00006_c[c] + C01753[c] => C00080_c[c] + C00005_c[c] + C08821[c]
 - id: R07489[c]
   name: L-cysteine:[ThiI] sulfurtransferase
-  genes: AT2G28850 or AT2G28860 or or AT2G34490 or AT2G34500
+  genes: AT2G28850 or AT2G28860 or AT2G34490 or AT2G34500
   equation: C05442[c] => C01753[c]
 - id: R07491[c]
   name: L-cysteine:[ThiI] sulfurtransferase
