iCB925 model gene association corrections

--- a/sbml/iCB925/reactions.yaml
+++ b/sbml/iCB925/reactions.yaml
@@ -1704,7 +1704,7 @@
   subsystem: H2 Synthesis
 - id: FDXNRy
   name: FDXNRy
-  genes: ( Cbei_0661 Cbei_2182 )
+  genes: ( Cbei_0661 or Cbei_2182 )
   equation: fdxrd[c] + h_c[c] + nadp[c] => fdxox[c] + nadph[c]
   subsystem: H2 Synthesis
 - id: FFSD
