corrected the compartment expression in the model NmrFL417

--- a/sbml/NmrFL413/compounds.yaml
+++ b/sbml/NmrFL413/compounds.yaml
@@ -55,16 +55,16 @@
   name: (MurNAc)1 (D-Ala-D-Ala-Lys-D-Glu-Ala)1 (PP-Und)1
   charge: 0
 - id: PCY
-  name: PCY[c]
+  name: PCY
   charge: 0
 - id: PCYe
-  name: PCYe[c]
+  name: PCYe
   charge: 0
 - id: PCYm
-  name: PCYm[c]
+  name: PCYm
   charge: 0
 - id: PCYme
-  name: PCYme[c]
+  name: PCYme
   charge: 0
 - id: cpd00001
   name: H2O
