--- a/sbml/NmrFL413/exchange.yaml
+++ b/sbml/NmrFL413/exchange.yaml
@@ -1,28 +1,28 @@
 compounds:
-- id: cpd00001_e
+- id: cpd00001
   reaction: EX_H2O
   lower: -999999
   upper: 999999
-- id: cpd00007_e
+- id: cpd00007
   reaction: EX_O2
   lower: -999999
   upper: 999999
-- id: cpd00009_e
+- id: cpd00009
   reaction: EX_H3PO4
   lower: -999999
   upper: 999999
-- id: cpd00011_e
+- id: cpd00011
   reaction: EX_CO2
   lower: 0
   upper: 999999
-- id: cpd00013_e
+- id: cpd00013
   reaction: EX_NH3
   lower: -26.5
   upper: 999999
-- id: cpd00024_e
+- id: cpd00024
   reaction: EX_akg
   fixed: 0
-- id: cpd00048_e
+- id: cpd00048
   reaction: EX_SO4
   lower: -999999
   upper: 999999
@@ -30,39 +30,39 @@ compounds:
   reaction: EX_H
   lower: -999999
   upper: 999999
-- id: cpd00067_e
+- id: cpd00067
   reaction: EX_He
   lower: 0
   upper: 999999
-- id: cpd00075_e
+- id: cpd00075
   reaction: EX_NO2-
   lower: 0
   upper: 999999
-- id: cpd00149_e
+- id: cpd00149
   reaction: EX_Co2
   lower: -999999
   upper: 999999
-- id: cpd00204_e
+- id: cpd00204
   reaction: EX_CO
   lower: -999999
   upper: 999999
-- id: cpd00242_e
+- id: cpd00242
   reaction: EX_HCO3
   lower: -999999
   upper: 999999
-- id: cpd00254_e
+- id: cpd00254
   reaction: EX_Mg
   lower: 0
   upper: 999999
-- id: cpd00418_e
+- id: cpd00418
   reaction: EX_NO
   lower: 0
   upper: 999999
-- id: cpd00659_e
+- id: cpd00659
   reaction: EX_n2o
   lower: 0
   upper: 999999
-- id: cpd10515_e
+- id: cpd10515
   reaction: EX_Fe2
   lower: -999999
   upper: 999999
